# redis-py

./: .gitignore  README.md  pyproject.toml
redis_py/: commands.py  exception.py  main.py  network.py  persistence.py  processor.py  protocol.py  utility.py
redis_py/resp/: handler.py  models.py  serializer.py
tests/: test_resp_protocol_handler.py  test_resp_serializer.py
