[tool.poetry]
name = "redis-py"
version = "0.1.0"
description = "A personal project to build a python implementation of the redis server"
authors = ["Tobechukwu Onyema <tobe.onyema@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
black = "^24.2.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.1"
pre-commit = "^3.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
start = "redis_py.main:start_server"

[tool.pytest.ini_options]
markers = [
    "happy: positive test cases",
    "sad: negative test cases",
]
